src/snapshots/afrotd__parser__tests__interpretation_7.1.5_5.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 7
  - 1
  - 5
index: 5
text: "3. und 2 von der B-45. Team A ist in Formation und der Snap\nsteht unmittelbar bevor. QB A12 ist in einer Shotgun-Formation und\nnutzt ein Klatschen der Hände als Startsignal. Ein Team B (a) Teammitglied oder (b) ein Assistenz-Coach klatscht in die Hände und End\nA88 begeht einen Fehlstart oder der Snapper snappt den Ball."
ruling: "Dead Ball Foul. Spielverzögerung durch verwirrende Signale. S21\nin beiden Fällen. Durch die Strafe hat Team A einen 1. und 10 von der\nB-40. Die Regel besagt, dass kein Spieler Defense-Signale benutzen\ndarf, die den Klang oder den Charakter von Offense Startsignalen haben oder diese Signale in anderer Weise behindern oder stören. Der\nSinn der Regel schließt Teammitglieder oder Coaches ein, die klatschen, wenn der Snap unmittelbar bevorsteht, um damit die Offense\nzu einem Fehlstart zu verleiten."
