src/snapshots/afrotd__parser__tests__interpretation_7.1.6_1.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 7
  - 1
  - 6
index: 1
text: "A83, ein berechtigter Receiver, ist der End an seiner Scrimmage\nLine und steht in der Nähe des Snappers in einer unausgeglichenen\n„T”- Formation. Quarterback A10 nimmt den ihm übergebenen Snap\nund gibt den Ball sofort weiter zu A83."
ruling: "Wenn die Bewegung des Balles vorwärts ist und der Ball A10’s Hand verlässt, bevor\ner von A83 berührt wird, ist es ein legaler Pass. A83 könnte sich zwar\ngenügend umgedreht haben, um einen Rückpass oder einen Handoff\n(legal) entgegen zu nehmen; aber wenn diese Aktion unmittelbar nach\ndem Snap erfolgte, ist es unwahrscheinlich, dass für einen Handoff genug Zeit verblieb, damit die Voraussetzungen des „Umdrehens” und der\n„zwei Meter hinter der Scrimmage Line” zutreffen."
