src/snapshots/afrotd__parser__tests__interpretation_7.2.4_1.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 7
  - 2
  - 4
index: 1
text: "B20 fängt (a) in seiner Endzone oder (b) auf seiner 3-Meterlinie\neinen legalen Vorwärtspass ab und wird durch seinen eigenen Schwung\nin seine Endzone getragen oder (c) fängt den Vorwärtspass im Spielfeld und geht freiwillig zurück in seine Endzone (kein Eigenschwung). In\njedem Fall fumbelt er in der Endzone und der Ball rollt nach vorne und\ngeht an der B-2 ins Aus."
ruling: "Der Ball gehört Team B am Spot\nof Fumble (Team B’s Endzone): (a) Touchback, (b) Team B’s Ball an der\nB-3 und (c) Safety (Regeln 8.5.1 und 8.6.1)."
