src/snapshots/afrotd__parser__tests__interpretation_7.3.10_1.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 7
  - 3
  - 10
index: 1
text: "Der unberechtigte Lineman A70 läuft mehr als drei Meter jenseits der neutralen Zone und berührt keinen Gegner. Er dreht um und\nkehrt hinter die neutrale Zone zurück, bevor A10 einen legalen Vorwärtspass wirft, der die neutrale Zone überquert."
ruling: Unberechtigt downfield. Strafe – 5 Meter vom Previous Spot.
