src/snapshots/afrotd__parser__tests__interpretation_7.3.10_3.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 7
  - 3
  - 10
index: 3
text: "1. und 10 von der A-37. Der unberechtigte Lineman A70 erhebt sich nach dem Snap und läuft downfield. Als der Passer den Ball\nloslässt, durchbricht der Helm von A70 die Fläche über der A-40. Der\nPass überquert die neutrale Zone und fällt an der A-39 unvollständig\nzu Boden."
ruling: "Foul, unberechtigter Receiver downfield. Ein Teil\nvon A70’s Körper befand sich mehr als drei Meter jenseits der neutralen\nZone, als der Pass geworfen wurde."
