src/snapshots/afrotd__parser__tests__interpretation_7.3.11_2.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 7
  - 3
  - 11
index: 2
text: "Team A snappt von der A-10. QB A12 geht zurück und wirft\neinen Vorwärtspass zum unberechtigten A70, während dieser sich in\nseiner Endzone befindet und (a) den Pass berührt, als er versucht, diesen zu fangen und der Pass wird unvollständig; (b) den Pass fängt und\nin der Endzone getackelt wird oder (c) den Pass fängt und den Ball bis\nzur A-3 advanct, wo er getackelt wird."
ruling: "(a) Team B kann die\n5-Meterstrafe, die einen Downverlust enthält, vom Previous Spot annehmen, wodurch der Down zählt. (b) der Ball ist in der Endzone dead,\nfür dessen Antrieb Team A verantwortlich ist, und Team B kann den Safety oder die Strafe, die einen Downverlust enthält, vom Previous Spot\nwählen. (c) 5-Meterstrafe und Downverlust. Der Versuch zählt, wenn die\nStrafe abgelehnt wird und der Dead Ball Spot günstiger für Team B ist\nals die Strafe (Beachte: (a), (b) und (c) könnten in Bezug auf die Position eines berechtigten Team A-Spielers oder der Örtlichkeit, von der\nA10 den Ball wirft, Intentional Grounding sein) (Regel 10.1.1.b). Wird\nauf ein Intentional Grounding entschieden, gibt es kein illegales Berühren eines Vorwärtspasses."
