src/snapshots/afrotd__parser__tests__interpretation_7.3.12_1.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 7
  - 3
  - 12
index: 1
text: "2. und 15 von der A-15. A11 wirft einen Vorwärtspass zu A88.\nWährend des Downs erhält B60 eine Flagge für einen anhaltenden Kontakt zum Kopf von Tackle A79. Der Pass auf A88 ist (a) vollständig an\nder A-20, und A88 advanct bis zu der A-30, wo er getackelt wird; (b)\nunvollständig oder abgefangen."
ruling: "(a) Die Strafe wird von der\nA-30 durchgeführt, A’s Ball, 1. und 10 von der A-45. (b) Die Strafe wird\nvom Previous Spot durchgeführt, A’s Ball, 1. und 10 von der A-30 (Regel 9.1 Strafe)."
