src/snapshots/afrotd__parser__tests__interpretation_7.3.12_2.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 7
  - 3
  - 12
index: 2
text: "2. und 15 von der A-20. A11 wirft einen legalen Vorwärtspass,\nder für A88 gedacht ist. Während des Passes erhält Defensive End B99\neine Flagge für ein unsportliches Verhalten. Der Pass auf A88 ist (a)\nvollständig, wonach A88 advanct und an der A-30 zu Boden gebracht\nwird; (b) unvollständig oder abgefangen."
ruling: "(a) Die Strafe wird\nvom Ende des Laufes, A-30, durchgeführt. 1. und 10 für Team A an der\nA-45. (b) Die Strafe wird vom Previous Spot durchgeführt, 1. und 10 für\nTeam A von der A-35 (Regel 9.2.1.a.1 Strafe)."
