src/snapshots/afrotd__parser__tests__interpretation_7.3.1_1.snap
---
source: src/parser.rs
expression: interpretation
snapshot_kind: text
---
article_nr:
  - 7
  - 3
  - 1
index: 1
text: "1. und 10 von der A-25. QB A12 befindet sich in einer ShotgunFormation an der A-15 und Slot Receiver A80, der sich auf der weiten\nSeite der Formation aufgestellt hat, bewegt sich vor dem Snap zurück\nauf A12 zu. A12 fängt den Snap und flippt den Ball sofort dem, vor ihm\nvorbeilaufenden A80 zu. (a) A80 fängt den Ball aus der Luft, als er an\nA12 vorbei ist und advanct downfield, bis er an der A-40 ins Aus läuft\noder (b) mufft den Ball, den ihm A12 zuwirft und der Ball fällt zu Boden."
ruling: "Das kurze Flippen des Balles durch A12 wird als legaler Vorwärtspass gewertet, solange er nicht klar und deutlich rückwärts\ngeworfen wird. (a) Vollständiger Vorwärtspass auf A80, Team A’s Ball,\n1. und 10 von der A-40, (b) wenn der Ball auf den Boden trifft, wird das\nals unvollständiger Vorwärtspass geregelt und das Vorwärtspass-Spiel\nist vorbei."
